urls,base,models,settings

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,7 +7,7 @@
     <link href="{% static 'css/blog.css %}" rel="stylesheet">
 </head>
 <body>
-<div id="contnt">
+<div id="content">
   {% block content %}
   {% endblock %}
 </div>
