--- a/templates/blog/post/list.html
+++ b/templates/blog/post/list.html
@@ -5,10 +5,10 @@
     {% for post in posts %}
         <div class="post">
             <h2>
-                <a href="{{ post.get_absolute_url }}"> {% post.title %}</a>
+                <a href="{{ post.get_absolute_url }}"> {{ post.title }}</a>
             </h2>
             <p class="date">
-                Published {% post.publish %} by {% post.author %}
+                Published {{ post.publish }} by {{ post.author }}
             </p>
         </div>
     {% endfor %}
